# cortex-message-handling

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/cortex_message_handling/: blackfly_binocular_feed.h  blackfly_binocular_relay.h  simulator_relay.h  video_feed.h
msg/: BinocularFeed.msg  CortexCommands.msg
src/: blackfly_binocular_relay.cpp  blackfly_trigger_aquisition.cpp  live_binocular_relay.cpp  relay_debug.cpp  simulator_relay.cpp  video_feed.cpp
